# bean-retire

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  example.beancount  mise.toml  pyproject.toml
bean_retire/: __init__.py  cli.py  models.py  parser.py  projection.py
tests/: test_parser.py  test_projection.py
tests/fixtures/: sample.beancount  sample_commodity.beancount  sample_pattern_b.beancount
